Fixing vertical spacing for responsive homepage

--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -117,7 +117,7 @@
     margin-bottom: $section-spacing-medium;
   }
 
-  @include breakpoint(1200) {
+  @include breakpoint(700) {
     margin-bottom: $section-spacing-small;
   }
 }
@@ -222,7 +222,7 @@
     margin: 0 auto $section-spacing-medium;
   }
 
-  @include breakpoint(1200) {
+  @include breakpoint(700) {
     margin: 0 auto $section-spacing-small;
   }
 }
@@ -250,7 +250,7 @@
     margin: 0 auto $section-spacing-medium;
   }
 
-  @include breakpoint(1200) {
+  @include breakpoint(700) {
     margin: 0 auto $section-spacing-small;
   }
 }
@@ -262,7 +262,7 @@
     margin: 0 auto $section-spacing-medium;
   }
 
-  @include breakpoint(1200) {
+  @include breakpoint(700) {
     margin: 0 auto $section-spacing-small;
   }
 }
